--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>--- <em>Paraphrased from Phil Karlton</em></p>
 </blockquote>
 <p><strong>fungp</strong> is a genetic programming library implemented in the Clojure programming language. It's pronounced fun-gee-pee, for <em>functional genetic programming</em> (or &quot;genetic programming is fun&quot;).</p>
-<p>A far more detailed explanation can be found in the core.clj source code. It is thoroughly documented. An HTML document generated from the source is in the <code>docs/</code> folder, and <a href="http://gaia.ecs.csus.edu/~vollmerm/gp/uberdoc.html">is available hosted on my school's web server here</a>. It's a good place to start and it includes a getting started tutoral (the source of which is of course available under src/fungp).</p>
+<p>A far more detailed explanation can be found in the core.clj source code. It is thoroughly documented. An HTML document generated from the source is in the <code>docs/</code> folder, and <a href="uberdoc.html">is available hosted on my school's web server here</a>. It's a good place to start and it includes a getting started tutoral (the source of which is of course available under src/fungp).</p>
 <h2 id="how-do-i-set-it-up">How do I set it up?</h2>
 <p>You'll need Clojure first, but that's easy. You can be up and running in seconds if you already have Java installed.</p>
 <p><a href="https://github.com/technomancy/leiningen#installation">First you install Leiningen.</a> This is how you'd do that in a Unix-like system.</p>
